Change local masonry component with npm package
Signed-off-by: Luis Miguel Rojas Aguilera <rojas@icomp.ufam.edu.br>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "masonry_gist_react_native",
+  "name": "react_native_infinite_masonry",
+  "main": "./components/Masonry.js",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-infinite-masonry": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
